--- a/CSS-methods-Task/css-methods.html
+++ b/CSS-methods-Task/css-methods.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <style>
+        button{background-color: green;color: beige;font-size: 20px;width: 150px;border-radius: 10px;
+
+        }
+    </style>
+    <link href="./my_first_task.css" rel="stylesheet"
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,17 +14,17 @@
     <title>CSS-Methods-Task</title>
     
 </head>
-<body>
-    <h1>World of Plants</h1> <!-- Style me via the external method! -->
-   <center> <img src="https://images.pexels.com/photos/1470171/pexels-photo-1470171.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" width="400px"> </center>
+<body style="background-color:wheat ;">
+    <h1> <center>World of Plants</center></h1> <!-- Style me via the external method! -->
+    <img src= "https://images.pexels.com/photos/1470171/pexels-photo-1470171.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" width="400px"> 
     <p>Discover Beautiful Plants</p> <!-- Style me via the external method! -->
     <ul>
-        <li type="circle">Plants For your House</li> <!-- Inline style 🙂 -->
-        <img src="https://images.pexels.com/photos/3076899/pexels-photo-3076899.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" > <!-- Inline Style, please -->
-        <li type="circle">Plants For your Garden</li> <!-- Inline style 🙂 -->
-        <img src="https://images.pexels.com/photos/64221/flower-sunflower-karnataka-india-64221.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" > <!-- Inline Style, please -->
-        <li type="circle">Plants For your Office</li> <!-- Inline style 🙂 -->
-        <img src="https://images.pexels.com/photos/10801695/pexels-photo-10801695.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" > <!-- Inline Style, please -->
+        <li style="font-size: 20px"style="font-family:verdana;"type="circle">Plants For your House</li> <!-- Inline style 🙂 -->
+        <img src="https://images.pexels.com/photos/3076899/pexels-photo-3076899.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" width="400px"> <!-- Inline Style, please -->
+        <li style="font-size: 20px"style="font-family:verdana;" type="circle">Plants For your Garden</li> <!-- Inline style 🙂 -->
+        <img src="https://images.pexels.com/photos/64221/flower-sunflower-karnataka-india-64221.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" width="400px">  <!-- Inline Style, please -->
+        <li style="font-size: 20px"style="font-family:verdana;" type="circle">Plants For your Office</li> <!-- Inline style 🙂 -->
+        <img src="https://images.pexels.com/photos/10801695/pexels-photo-10801695.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" width="400px" > <!-- Inline Style, please -->
     </ul>
     <button>Browse</button>  <!-- I would like to be styled with the internal method, please ☺️ -->
 </body>
