--- a/CSS-methods-Task/css-methods.html
+++ b/CSS-methods-Task/css-methods.html
@@ -19,12 +19,12 @@
     <img src= "https://images.pexels.com/photos/1470171/pexels-photo-1470171.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" width="400px"> 
     <p>Discover Beautiful Plants</p> <!-- Style me via the external method! -->
     <ul>
-        <li style="font-size: 20px"style="font-family:verdana;"type="circle">Plants For your House</li> <!-- Inline style 🙂 -->
-        <img src="https://images.pexels.com/photos/3076899/pexels-photo-3076899.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" width="400px"> <!-- Inline Style, please -->
-        <li style="font-size: 20px"style="font-family:verdana;" type="circle">Plants For your Garden</li> <!-- Inline style 🙂 -->
-        <img src="https://images.pexels.com/photos/64221/flower-sunflower-karnataka-india-64221.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" width="400px">  <!-- Inline Style, please -->
-        <li style="font-size: 20px"style="font-family:verdana;" type="circle">Plants For your Office</li> <!-- Inline style 🙂 -->
-        <img src="https://images.pexels.com/photos/10801695/pexels-photo-10801695.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" width="400px" > <!-- Inline Style, please -->
+        <li style="font-size: 20px;font-family:verdana;"type="circle">Plants For your House</li> <!-- Inline style 🙂 -->
+        <img style="border-radius: 10px;" src="https://images.pexels.com/photos/3076899/pexels-photo-3076899.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" width="400px"> <!-- Inline Style, please -->
+        <li style="font-size: 20px;font-family:verdana;" type="circle">Plants For your Garden</li> <!-- Inline style 🙂 -->
+        <img style="border-radius: 10px;"src="https://images.pexels.com/photos/64221/flower-sunflower-karnataka-india-64221.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" width="400px">  <!-- Inline Style, please -->
+        <li style="font-size: 20px;font-family:verdana;" type="circle">Plants For your Office</li> <!-- Inline style 🙂 -->
+        <img style="border-radius: 10px;" src="https://images.pexels.com/photos/10801695/pexels-photo-10801695.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" width="400px" > <!-- Inline Style, please -->
     </ul>
     <button>Browse</button>  <!-- I would like to be styled with the internal method, please ☺️ -->
 </body>
